examples/test/testpolicy16471.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16471
  namespace: namespace419
spec:
  podSelector:
    matchLabels:
      key23: value26
      key32: value6
      key1: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value1
          key21: value27
      podSelector:
        matchLabels:
          key39: value7
